Improved UI: Fixed button styling and positioning, enhanced visual feedback

--- a/index.html
+++ b/index.html
@@ -87,14 +87,16 @@
                             <code>cd gui<br>python main.py</code>
                         </li>
                     </ol>
-                    <h4>Controls:</h4>
-                    <ul>
-                        <li>Press '1' and click to create process nodes (green)</li>
-                        <li>Press '2' and click to create resource nodes (red)</li>
-                        <li>Left-click nodes to create edges</li>
-                        <li>Right-click nodes to delete them</li>
-                        <li>Click "Check Deadlock" to detect cycles</li>
-                    </ul>
+                    <div class="info-panel">
+                        <h3>Controls:</h3>
+                        <ul>
+                            <li>Press '1' and click to create process nodes (green)</li>
+                            <li>Press '2' and click to create resource nodes (red)</li>
+                            <li>Left-click nodes to create edges</li>
+                            <li>Right-click nodes to delete them</li>
+                            <li>Click <button class="check-button">Check Deadlock</button> to detect cycles</li>
+                        </ul>
+                    </div>
                     <a href="https://github.com/Saatvik-Cheruku/automated-deadlock-detector/archive/refs/heads/main.zip" class="demo-button">Download Demo</a>
                 </div>
                 <div class="demo-window">
