--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="footer-content">
             <div class="footer-section">
                 <h3>About</h3>
-                <p>Created by Saatvik Cheruku</p>
+                <p>Created by Saatvik Cheruku,Shivadan Dogra, Parvinder Kaur</p>
                 <p>A project demonstrating deadlock detection in operating systems.</p>
             </div>
             <div class="footer-section">
