Fix: Update download functionality in index.html and script.js

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             <li>Click <button class="check-button">Check Deadlock</button> to detect cycles</li>
                         </ul>
                     </div>
-                    <a href="https://github.com/Saatvik-Cheruku/automated-deadlock-detector/archive/refs/heads/main.zip" class="demo-button">Download Demo</a>
+                    <a href="https://codeload.github.com/Saatvik-Cheruku/automated-deadlock-detector/zip/refs/heads/main" class="demo-button" download>Download Demo</a>
                 </div>
                 <div class="demo-window">
                     <img src="demo-screenshot.png" alt="Deadlock Detection Demo Screenshot" class="demo-screenshot">
